fix: alignment

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.prose h1:first-child,
+.prose h2:first-child,
+.prose h3:first-child {
+  margin-top: 0px;
+  padding-top: 0px;
+}
